News UAT/force-app/main/default/objects/Booking_System_Portfolio_Junction__c/Booking_System_Portfolio_Junction__c.object-meta.xml
<CustomObject>
    <label>Booking System - Portfolio Junction</label>
    <nameField>
        <label>Booking System - Portfolio Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking System - Portfolio Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>