News UAT/force-app/main/default/objects/Booking_System_Portfolio_Junction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booking System - Portfolio Junctions</relationshipLabel>
    <relationshipName>Booking_System_Portfolio_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>