News UAT/force-app/main/default/objects/Booking_System_Portfolio_Junction__c/fields/Booking_System_Account__c.field-meta.xml
<CustomField>
    <fullName>Booking_System_Account__c</fullName>
    <description>NextGen</description>
    <label>Booking System Account</label>
    <referenceTo>External_Account__c</referenceTo>
    <relationshipLabel>Booking System - Portfolio Junctions</relationshipLabel>
    <relationshipName>Booking_System_Portfolio_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>