News UAT/force-app/main/default/objects/Booking_System_Portfolio_Junction__c/fields/BSA_Portfolio_Id__c.field-meta.xml
<CustomField>
    <fullName>BSA_Portfolio_Id__c</fullName>
    <description>External Unique Id for Booking System Account relationship to Portfolio</description>
    <externalId>true</externalId>
    <label>BSA Portfolio Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>