News UAT/force-app/main/default/objects/Booking_System_Portfolio_Junction__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Usually set as null however, there could be a specific end date for a particular portfolio to an account originated by the Data Services and Phoenix reporting team</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>