News UAT/force-app/main/default/objects/Booking_System_Portfolio_Junction__c/fields/New_BSA_Portfolio_Id__c.field-meta.xml
<CustomField>
    <fullName>New_BSA_Portfolio_Id__c</fullName>
    <externalId>true</externalId>
    <label>New BSA Portfolio Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>