News UAT/force-app/main/default/objects/Booking_System_Portfolio_Junction__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <label>Portfolio</label>
    <referenceTo>Portfolio2__c</referenceTo>
    <relationshipLabel>Booking System - Portfolio Junctions</relationshipLabel>
    <relationshipName>Booking_System_Portfolio_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>