News UAT/force-app/main/default/objects/Booking_System_Portfolio_Junction__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of the portfolio mapped to an Booking System Account of GNRA</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>