News UAT/force-app/main/default/objects/Booking_System_Portfolio_Junction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_System_Account__c</columns>
    <columns>BSA_Portfolio_Id__c</columns>
    <columns>Portfolio_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Relationship_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Delete_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>